// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ViewLogbookEntry component will render correctly for a full log entry 1`] = `
"<div class="flex gap-5 justify-between items-center my-2">
  <div>
    <h1 class="text-2xl font-bold font-title" data-testid="entry-logNumber"> #12</h1>
  </div>
  <p class="rounded-full bg-link flex gap-2 items-center"><img class="rounded-full" width="32px" height="32px" alt="" src="https://example.com/avatar.jpg"><span class="pr-3">Jake</span></p>
</div>
<div class="grid grid-cols-1 md:grid-cols-2 gap-3">
  <!-- General Dive Info -->
  <div class="border-2 border-secondary p-2 rounded-md space-y-3 px-6">
    <h2 class="text-xl font-bold font-title -ml-3">Dive Info</h2>
    <div class="flex flex-col gap-0.5"><label class="font-bold">Entry time:</label><span class="font-mono text-xs">January 31, 2023 5:16 PM</span><span class="font-mono text-xs">Europe/Dublin</span></div>
    <div class="flex flex-col gap-0.5"><label class="font-bold">Duration:</label>
      <div class="flex gap-5">
        <div class="flex flex-col items-center px-2"><span>Duration</span><span class="font-mono text-xs">0:40:55.00</span></div>
        <div class="flex flex-col items-center px-2"><span>Bottom Time</span><span class="font-mono text-xs">0:35:3.00</span></div>
        <div class="flex flex-col items-center px-2"><span>Surface Interval</span><span class="font-mono text-xs">Unspecified</span></div>
      </div>
    </div>
    <div class="flex flex-col gap-0.5"><label class="font-bold">Depth:</label>
      <div class="flex gap-5">
        <div class="flex flex-col items-center px-2"><span>Maximum</span><span class="font-mono text-xs">33.3 ft</span></div>
        <div class="flex flex-col items-center px-2"><span>Average</span><span class="font-mono text-xs">27.3 ft</span></div>
      </div>
    </div>
    <div class="flex flex-col gap-0.5"><label class="font-bold">Tags:</label>
      <div class="flex flex-wrap gap-2 text-sm" value="Wreck dive,Night dive">
        <p>No tags</p>
        <!--v-if-->
      </div>
    </div>
  </div><!-- Location -->
  <div class="border-2 border-secondary p-2 rounded-md space-y-3 px-6">
    <h2 class="text-xl font-bold font-title -ml-3">Location</h2>
    <div class="flex flex-col gap-0.5"><label class="font-bold">Dive Site:</label><span class="font-mono text-xs capitalize">Catalina Island</span></div>
    <div class="flex flex-col gap-0.5"><label class="font-bold">Location:</label>
      <p class="font-mono text-xs capitalize">California</p>
      <!--v-if-->
    </div>
  </div><!-- Dive Conditions -->
  <div class="border-2 border-secondary p-2 rounded-md space-y-3 px-6">
    <h2 class="text-xl font-bold font-title -ml-3">Conditions</h2>
    <div class="flex flex-col gap-0.5"><label class="font-bold">Weather:</label><span class="font-mono text-xs capitalize">Sunny</span></div>
    <div class="flex flex-col gap-0.5"><label class="font-bold">Temperature:</label>
      <div class="flex gap-5">
        <div class="flex flex-col items-center px-2"><span>Air Temp</span><span class="font-mono text-xs">72.0 °F</span></div>
        <div class="flex flex-col items-center px-2"><span>Water Temp</span><span class="font-mono text-xs">70.0 °F</span></div>
        <div class="flex flex-col items-center px-2"><span>Thermocline</span><span class="font-mono text-xs">50.0 °F</span></div>
      </div>
    </div>
    <div class="flex flex-col gap-0.5"><label class="font-bold">Water Conditions:</label>
      <div class="flex gap-5">
        <div class="flex flex-col items-center px-2"><span>Current</span><span class="font-mono text-xs">Strong</span></div>
        <div class="flex flex-col items-center px-2"><span>Visibility</span><span class="font-mono text-xs">Poor</span></div>
        <div class="flex flex-col items-center px-2"><span>Chop</span><span class="font-mono text-xs">Light</span></div>
      </div>
    </div>
  </div><!-- Gas Consumption -->
  <div class="border-2 border-secondary p-2 rounded-md space-y-3 px-6">
    <h2 class="text-xl font-bold font-title -ml-3">Breathing Gas</h2>
    <div class="flex align-baseline gap-3 ml-2"><span class="font-bold font-mono text-lg">1)</span>
      <div>
        <p class="space-x-2"><span class="font-bold">My tank</span>
          <!--v-if-->
        </p>
        <p class="space-x-2"><span>3000 psi</span><span><i class="fa-solid fa-arrow-right"></i></span><span>1000 psi</span></p>
      </div>
    </div>
  </div><!-- Equipment -->
  <div class="border-2 border-secondary p-2 rounded-md space-y-3 px-6">
    <h2 class="text-xl font-bold font-title -ml-3">Equipment</h2>
    <div class="flex flex-col gap-0.5"><label class="font-bold">Weight Configuration:</label>
      <div class="flex gap-5">
        <div class="flex flex-col items-center px-2"><span>Weight</span><span class="font-mono text-xs">6.5 lb</span></div>
        <div class="flex flex-col items-center px-2"><span>Correctness</span><span class="font-mono text-xs">Correct</span></div>
        <div class="flex flex-col items-center px-2"><span>Trim</span><span class="font-mono text-xs">Knees down</span></div>
      </div>
    </div>
    <div class="flex flex-col gap-0.5"><label class="font-bold">Exposure Suit:</label><span class="font-mono text-xs">Drysuit</span></div>
    <div class="grid grid-cols-2 gap-2">
      <p class="flex gap-2 items-baseline"><label class="font-bold text-right min-w-16">Boots:</label><span class="text-success"><i class="fas fa-check-circle"></i><span class="sr-only">Yes</span></span></p>
      <p class="flex gap-2 items-baseline"><label class="font-bold text-right min-w-16">Camera:</label><span class="text-secondary"><i class="fas fa-times-circle"></i><span class="sr-only">No</span></span></p>
      <p class="flex gap-2 items-baseline"><label class="font-bold text-right min-w-16">Gloves:</label><span class="text-success"><i class="fas fa-check-circle"></i><span class="sr-only">Yes</span></span></p>
      <p class="flex gap-2 items-baseline"><label class="font-bold text-right min-w-16">Hood:</label><span class="text-success"><i class="fas fa-check-circle"></i><span class="sr-only">Yes</span></span></p>
      <p class="flex gap-2 items-baseline"><label class="font-bold text-right min-w-16">Scooter:</label><span class="text-secondary"><i class="fas fa-times-circle"></i><span class="sr-only">No</span></span></p>
      <p class="flex gap-2 items-baseline"><label class="font-bold text-right min-w-16">Torch:</label><span class="text-success"><i class="fas fa-check-circle"></i><span class="sr-only">Yes</span></span></p>
    </div>
  </div><!-- Notes -->
  <div class="border-2 border-secondary p-2 rounded-md px-6">
    <div class="flex flex-col gap-0.5">
      <h2 class="text-xl font-bold font-title -ml-3">Notes</h2>
      <div><label class="font-bold">Comments:</label>
        <p class="font-mono text-xs">This was a great dive!</p>
      </div><label class="font-bold">Rating:</label>
      <p class="flex gap-2 items-center">
      <div read-only="">3.8</div><span class="font-mono text-xs">3.8</span></p>
    </div>
  </div>
</div>"
`;

exports[`ViewLogbookEntry component will render correctly for a minimal log entry 1`] = `
"<div class="flex gap-5 justify-between items-center my-2">
  <div>
    <!--v-if-->
  </div>
  <p class="rounded-full bg-link flex gap-2 items-center"><img class="rounded-full" width="32px" height="32px" alt="" src="https://ui-avatars.com/api/?name=logbook_guy"><span class="pr-3">logbook_guy</span></p>
</div>
<div class="grid grid-cols-1 md:grid-cols-2 gap-3">
  <!-- General Dive Info -->
  <div class="border-2 border-secondary p-2 rounded-md space-y-3 px-6">
    <h2 class="text-xl font-bold font-title -ml-3">Dive Info</h2>
    <div class="flex flex-col gap-0.5"><label class="font-bold">Entry time:</label><span class="font-mono text-xs">January 31, 2023 9:16 AM</span><span class="font-mono text-xs">America/Los_Angeles</span></div>
    <div class="flex flex-col gap-0.5"><label class="font-bold">Duration:</label>
      <div class="flex gap-5">
        <div class="flex flex-col items-center px-2"><span>Duration</span><span class="font-mono text-xs">0:00:44.10</span></div>
        <div class="flex flex-col items-center px-2"><span>Bottom Time</span><span class="font-mono text-xs">Unspecified</span></div>
        <div class="flex flex-col items-center px-2"><span>Surface Interval</span><span class="font-mono text-xs">Unspecified</span></div>
      </div>
    </div>
    <div class="flex flex-col gap-0.5"><label class="font-bold">Depth:</label>
      <div class="flex gap-5">
        <div class="flex flex-col items-center px-2"><span>Maximum</span><span class="font-mono text-xs">Unspecified</span></div>
        <div class="flex flex-col items-center px-2"><span>Average</span><span class="font-mono text-xs">Unspecified</span></div>
      </div>
    </div>
    <div class="flex flex-col gap-0.5"><label class="font-bold">Tags:</label>
      <div class="flex flex-wrap gap-2 text-sm">
        <p>No tags</p>
        <!--v-if-->
      </div>
    </div>
  </div><!-- Location -->
  <div class="border-2 border-secondary p-2 rounded-md space-y-3 px-6">
    <h2 class="text-xl font-bold font-title -ml-3">Location</h2>
    <div class="flex flex-col gap-0.5"><label class="font-bold">Dive Site:</label><span class="font-mono text-xs capitalize">Unspecified</span></div>
    <div class="flex flex-col gap-0.5"><label class="font-bold">Location:</label>
      <p class="font-mono text-xs capitalize">Unspecified</p>
      <!--v-if-->
    </div>
  </div><!-- Dive Conditions -->
  <!--v-if-->
  <!-- Gas Consumption -->
  <div class="border-2 border-secondary p-2 rounded-md space-y-3 px-6">
    <h2 class="text-xl font-bold font-title -ml-3">Breathing Gas</h2>
    <div class="flex align-baseline gap-3 ml-2"><span class="font-bold font-mono text-lg">1)</span>
      <div>
        <p class="space-x-2"><span class="font-bold">My tank</span>
          <!--v-if-->
        </p>
        <p class="space-x-2"><span>3000 psi</span><span><i class="fa-solid fa-arrow-right"></i></span><span>1000 psi</span></p>
      </div>
    </div>
  </div><!-- Equipment -->
  <!--v-if-->
  <!-- Notes -->
  <div class="border-2 border-secondary p-2 rounded-md px-6">
    <div class="flex flex-col gap-0.5">
      <h2 class="text-xl font-bold font-title -ml-3">Notes</h2>
      <!--v-if--><label class="font-bold">Rating:</label>
      <p class="flex gap-2 items-center">
      <div read-only="">0</div><span class="font-mono text-xs">not rated</span></p>
    </div>
  </div>
</div>"
`;
